* Fixed NPE in Native PostgreSQL repository when adding inducement with runtime targetRef filter. See bug:MID-10305[].
* Fixed too verbose logging when user in GUI entered syntacticly incorrect filter. See bug:MID-9342[].
* Fixed All Access page crashing if assignment has multiple provenances. See bug:MID-10217[] and bug:MID-10358[].


* Performance improvements in Native PostgreSQL repository:
** Lazy parsing for value metadata in Native PostgreSQL repository. Value metadata are parsed only if they are actually used
** Partial updates which takes use of splitted full objects. When modification only changes assignments, linkRef, operationExecution or roleMembershipRef, there is no need to load / modify and serialize full object, only changed parts.
** Decreased audit insert time when auditing large adds / modifications.

* Performance tuning improvements:
** Added quick option to SystemConfiguration/internals/valueMetadata to disable default provenance metadata for multivalue items (excepts assignments).
** Added `iterationPageSize` to GetOperationOptions which allows to customize size of page in search*Iterative in Groovy Scripts.


== Changes With Respect To Version 4.8

=== New Features and Major Improvements

* xrefv:/midpoint/reference/support-4.9/resources/attribute-caching/[Shadow caching] was significantly improved and is now a regular midPoint feature.
** Shadow caching is enabled by default on new deployments and needs to be explicitly enabled on existing ones.
* Native Repository Support for `searchContainersIteratively` for all container types
** Removed upper record limit for reports for assignments, certification cases, certification work items and others.
** Changed transaction isolation from READ_COMMITED to REPEATABLE_READ.
** Changed storage strategy for complex container types - actual data stored inside their own table instead of parent object JSON.